--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-attrs (18.2.0-1pexip1) pexip; urgency=medium
+
+  * Migrate to Buster
+
+ -- Vincent Sanders <vince@pexip.com>  Sat, 29 Feb 2020 23:23:28 +0000
+
 python-attrs (18.2.0-1) unstable; urgency=medium
 
   * Team upload.
