--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-attrs (20.3.0-1pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:35:13 +0100
+
 python-attrs (20.3.0-1pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
